--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.7.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
